--- a/PolicyAmendmentApp2/views/landing.pug
+++ b/PolicyAmendmentApp2/views/landing.pug
@@ -1,14 +1,29 @@
 extends layout
+
 block content
     html
         head
             title Political Conference Amendments Platform
             link(rel="icon" href="/favicon.ico" type="image/x-icon")
+            style.
+                .button {
+                    display: inline-block;
+                    padding: 10px 20px;
+                    background-color: #0073e6;
+                    color: white;
+                    text-decoration: none;
+                    border-radius: 5px;
+                    font-weight: bold;
+                    transition: background-color 0.3s ease;
+                }
+                .button:hover {
+                    background-color: #005bb5;
+                }
         body
             header
-                img(src="/path/to/dsf-logo.png" alt="DSF Logo" style="width: 200px;")
+                img(src="../public/dsf-logo.png" alt="DSF Logo" style="width: 200px;")
                 h1 Political Conference at CBS
                 p Welcome to the DSF Political Conference platform. This is where you can submit and manage amendments for the conference discussions.
 
-            //- Link to login page
+            //- Pretty button link to login page
             a.button(href="/user/login") Login to Submit an Amendment
