--- a/PolicyAmendmentApp2/views/landing.pug
+++ b/PolicyAmendmentApp2/views/landing.pug
@@ -21,7 +21,7 @@ block content
                 }
         body
             header
-                img(src="/public/dsf-logo.png" alt="DSF Logo" style="width: 200px;")
+                img(src="/dsf-logo.png" alt="DSF Logo" style="width: 200px;")
                 h1 Political Conference at CBS
                 p Welcome to the DSF Political Conference platform. This is where you can submit and manage amendments for the conference discussions.
 
