--- a/PolicyAmendmentApp2/views/confirmation.pug
+++ b/PolicyAmendmentApp2/views/confirmation.pug
@@ -3,4 +3,4 @@ block content
     body
         h1 Amendments Sent Successfully!
         p All amendments have been saved and cleared. You can return to the main page to upload more amendments.
-        a(href="/") Return to Main Page
+        a(href="/amendment") Return to Main Page
