--- a/PolicyAmendmentApp2/views/landing.pug
+++ b/PolicyAmendmentApp2/views/landing.pug
@@ -22,7 +22,7 @@ block content
         body
             header
                 img(src="/dsf-logo.png" alt="DSF Logo" style="width: 200px;")
-                h1 Political Conference at CBS
+                h1 Political Test at CBS
                 p Welcome to the DSF Political Conference platform. This is where you can submit and manage amendments for the conference discussions.
 
             //- Pretty button link to login page
