--- a/PolicyAmendmentApp2/views/landing.pug
+++ b/PolicyAmendmentApp2/views/landing.pug
@@ -22,8 +22,8 @@ block content
         body
             header
                 img(src="/dsf-logo.png" alt="DSF Logo" style="width: 200px;")
-                h1 Political Test at CBS
-                p Welcome to the DSF Political Conference platform. This is where you can submit and manage amendments for the conference discussions.
+                h1 Political Conference at CBS
+                p Welcome to the DSF Political Conference 25 platform. This is where you can submit and manage amendments for the conference discussions.
 
             //- Pretty button link to login page
             a.button(href="/user/login") Login to Submit an Amendment
