--- a/PolicyAmendmentApp2/views/landing.pug
+++ b/PolicyAmendmentApp2/views/landing.pug
@@ -23,7 +23,7 @@ block content
             header
                 img(src="/dsf-logo.png" alt="DSF Logo" style="width: 200px;")
                 h1 Political Conference at CBS
-                p Welcome to the DSF Political Conference 25 platform. This is where you can submit and manage amendments for the conference discussions.
+                p Welcome to the DSF Political Conference platform. This is where you can submit and manage amendments for the conference discussions.
 
             //- Pretty button link to login page
             a.button(href="/user/login") Login to Submit an Amendment
