--- a/PolicyAmendmentApp2/views/paperSelection.pug
+++ b/PolicyAmendmentApp2/views/paperSelection.pug
@@ -4,6 +4,7 @@ block content
     h1 Welcome to the amendment home page
     p Please select the paper you would like to work on:
 
-    each paper in papers
-        a(href="/amendment/" + paper.name)
-            button.paper #{paper.name}
+    div.container.paperCenter
+        each paper in papers
+            a(href="/amendment/" + paper.name)
+                button.large(class=paper.name === selectedPaper ? 'active' : '') #{paper.name}
