Fixing upload render error

--- a/PolicyAmendmentApp2/views/amendment.pug
+++ b/PolicyAmendmentApp2/views/amendment.pug
@@ -70,13 +70,12 @@ block content
     table
       tr
         th ÆF Nummer
-        th ÆF til ÆF Nummer
+        th Indskrivning
         th Modstridende med
         th Linje fra
         th Linje til
-        th Indskrivning
         th Stiller
-        th Medstillere
+        th Medstiller
         th Type af ÆF
         th Oprindelig tekst
         th Ny tekst
