--- a/PolicyAmendmentApp2/views/layout.pug
+++ b/PolicyAmendmentApp2/views/layout.pug
@@ -4,6 +4,10 @@ html
         title My App
         link(rel="stylesheet" href="/stylesheets/style.css")
     body
+        // Image containers for left and right background images
+        div.image-container-left
+        div.image-container-right
+
         // Role-based buttons
         if user
             div.user-info-container
