--- a/PolicyAmendmentApp2/public/stylesheets/style.css
+++ b/PolicyAmendmentApp2/public/stylesheets/style.css
@@ -1,8 +1,20 @@
+/* Define color and font variables */
+:root {
+    --primary-color: #96cae5;
+    --secondary-color: #fece43;
+    --danger-color: #FF4C4C;
+    --danger-hover-color: #E63946;
+    --background-color: #f4f4f9;
+    --text-color: #333;
+    --highlight-color: #81C6E1;
+    --font-family: Arial, sans-serif;
+}
+
 /* General body and headings */
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
-    color: #333;
+    font-family: var(--font-family);
+    background-color: var(--background-color);
+    color: var(--text-color);
     margin: 0;
     padding: 20px;
     display: flex;
@@ -11,7 +23,7 @@ body {
 }
 
 h1, h2 {
-    color: #4A90E2;
+    color: var(--primary-color);
     margin-bottom: 20px;
     text-align: center;
 }
@@ -32,7 +44,7 @@ table th, table td {
 }
 
 table th {
-    background-color: #4A90E2;
+    background-color: var(--primary-color);
     color: white;
     text-transform: uppercase;
 }
@@ -96,7 +108,7 @@ form button,
 .button-edit,
 .button-save,
 .button-delete {
-    background-color: #4A90E2;
+    background-color: var(--primary-color);
     color: white;
     padding: 10px 20px;
     border: none;
@@ -110,15 +122,15 @@ form button,
 form button:hover,
 .button-edit:hover,
 .button-save:hover {
-    background-color: #357ABD;
+    background-color: var(--secondary-color);
 }
 
 .button-delete {
-    background-color: #FF4C4C;
+    background-color: var(--danger-color);
 }
 
 .button-delete:hover {
-    background-color: #E63946;
+    background-color: var(--danger-hover-color);
     transform: scale(1.05);
 }
 
@@ -131,7 +143,7 @@ form button:hover,
 }
 
 .admin-panel-button {
-    background-color: #4A90E2;
+    background-color: var(--primary-color);
     color: white;
     padding: 10px 20px;
     font-size: 14px;
@@ -143,12 +155,12 @@ form button:hover,
 }
 
 .admin-panel-button:hover {
-    background-color: #357ABD;
+    background-color: var(--secondary-color);
     transform: scale(1.05);
 }
 
 button {
-    background-color: #4A90E2;
+    background-color: var(--primary-color);
     color: white;
     padding: 10px 20px;
     margin-bottom: 20px;
@@ -162,7 +174,7 @@ button {
 
 button.active {
     background-color: white;
-    color: #4A90E2;
+    color: var(--primary-color);
 }
 
 .large {
@@ -178,7 +190,6 @@ button.active {
     justify-content: space-around;
     flex-wrap: wrap
 }
-
 
 .paperCenter {
     position: center;
@@ -197,7 +208,7 @@ p {
 }
 
 a {
-    color: #4A90E2;
+    color: var(--primary-color);
     text-decoration: none;
     font-weight: bold;
 }
@@ -207,7 +218,7 @@ a:hover {
 }
 
 ul {
-    color: #FF4C4C;
+    color: var(--danger-color);
     margin-top: 10px;
 }
 
@@ -219,9 +230,9 @@ ul li {
 .user-info-container {
     position: fixed;
     top: 10px;
-    left: 10px; /* Change from right to left to move it to the left side */
+    left: 10px;
     z-index: 1000;
-    background-color: #f4f4f9;
+    background-color: var(--background-color);
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -232,12 +243,12 @@ ul li {
 }
 
 .user-name {
-    color: #333;
+    color: var(--text-color);
     font-weight: bold;
 }
 
 .logout-button {
-    background-color: #4A90E2;
+    background-color: var(--primary-color);
     color: white;
     padding: 5px 10px;
     text-decoration: none;
@@ -247,35 +258,113 @@ ul li {
 }
 
 .logout-button:hover {
-    background-color: #357ABD;
+    background-color: var(--secondary-color);
 }
 
 /* Custom styles for Select2 */
 .select2-container--default .select2-selection--multiple .select2-selection__choice {
-    background-color: #357ABD !important; /* Blue background for selected options */
-    border: 1px solid #357ABD !important; /* Blue border for selected options */
-    color: white !important; /* White text for selected options */
-    padding: 2px 7px !important; /* Increased padding for selected options */
+    background-color: var(--secondary-color) !important;
+    border: 1px solid var(--secondary-color) !important;
+    color: white !important;
+    padding: 2px 7px !important;
 }
 
 .select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
-    color: white !important; /* White text for remove icon */
+    color: white !important;
 }
 
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-    background-color: #357ABD !important; /* Blue background for highlighted options */
-    color: white !important; /* White text for highlighted options */
+    background-color: var(--secondary-color) !important;
+    color: white !important;
 }
 
-/* Ensure default text color is not red */
 .select2-container--default .select2-results__option {
-    color: black !important; /* Default text color for options */
+    color: black !important;
 }
 
-/* Ensure selected boxes have blue background and white text */
 .select2-container--default .select2-selection--multiple .select2-selection__choice[aria-selected="true"] {
-    background-color: #357ABD !important; /* Blue background for selected boxes */
-    color: white !important; /* White text for selected boxes */
-    padding: 5px 10px !important; /* Increased padding for selected boxes */
+    background-color: var(--secondary-color) !important;
+    color: white !important;
+    padding: 5px 10px !important;
+}
+
+/* Fullscreen overlay to lock interaction */
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.modal {
+    position: relative;
+    top: 10%;
+    width: auto;
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    max-width: 400px;
+    width: 100%;
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.4);
+    z-index: 1001;
+    position: relative;
+}
+
+/* Error title styling */
+.modal-title {
+    font-size: 30px;
+    margin-bottom: 10px;
+    color: var(--highlight-color);
+    font-weight: bold;
+}
+
+.modal-buttons {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.modal-buttons button,
+.modal-buttons a button {
+    padding: 8px 20px;
+    background-color: var(--highlight-color);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+.modal-buttons button:hover,
+.modal-buttons a button:hover {
+    background-color: #70acc4;
+}
+
+/* Close "X" button */
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    cursor: pointer;
+    color: #333;
+}
+
+.close-button:hover {
+    color: #000;
 }
 
